# brain-games

./: .gitignore  README.md  pyproject.toml  setup.cfg
andrka_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: __init__.py  cli.py  engine.py  even.py  game.py
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
